@@ -2228,12 +2228,10 @@ Voici un exemple :</block>
   <block id="0189c782e04bc566597908eddaee3dd5" category="section-title">Afficher les moniteurs d'alerte</block>
   <block id="d8d1f09f12d3047d0b1d5264e0fbb3d4" category="paragraph">Pour afficher les moniteurs d’alerte, suivez ces étapes :</block>
   <block id="8891b6740bffe77b967f8fe0f2bb0320" category="inline-image-macro">Une capture d'écran des moniteurs d'alerte pour les abonnements Keystone</block>
-  <block id="ae75ac6ecba83cd82e353c5c2dddf9ca" category="paragraph">Vous pouvez afficher une liste des moniteurs d'alerte sur vos abonnements Keystone , y compris les noms des moniteurs, les conditions d'alerte qui déclenchent des notifications, les niveaux de gravité, les numéros d'abonnement, les niveaux de service de performances et l'état.  Vous pouvez vérifier la colonne *Créé par* pour déterminer si les moniteurs d'alerte sont générés par le système ou définis par l'utilisateur.</block>
   <block id="6b29e04f1a3d7126b32fea3e35336be6" category="section-title">Créer et gérer des moniteurs d'alerte</block>
   <block id="c52ec421c31615867815fd4658197c12" category="paragraph">À partir de l'onglet *Moniteurs d'alerte*, vous pouvez créer des moniteurs pour suivre l'utilisation de la capacité et l'expiration de l'abonnement.  Vous pouvez également modifier, dupliquer ou supprimer des moniteurs existants selon vos besoins.</block>
   <block id="57ff1be6332a578fa82ccb64d9259d54" category="open-title">Créer un moniteur</block>
   <block id="64c64a9516f4ac5c0006a03c872e7317" category="paragraph">Pour créer un moniteur d’alerte, suivez ces étapes :</block>
-  <block id="a3513012c18df0c1a7b8764f4e9f1ff9" category="list-text">Cliquez sur le bouton *Créer un moniteur*.</block>
   <block id="f4743dcb07fb533885399ef1728ce857" category="paragraph">La page *Créer un moniteur d’alerte* apparaît.</block>
   <block id="704b16afc2be166a3265886d6a494bb5" category="inline-image-macro">Capture d'écran de la création d'un moniteur d'alerte pour les abonnements Keystone</block>
   <block id="b2aa832e4d8d1fd7361158475afea146" category="paragraph"><block ref="b2aa832e4d8d1fd7361158475afea146" category="inline-image-macro-rx" type="image"></block></block>
@@ -2258,7 +2256,6 @@ Voici un exemple :</block>
   <block id="37436487b6f97021df7ee2c4adbdfa45" category="list-text">Sélectionnez l’icône représentant des points de suspension pour le moniteur que vous souhaitez copier.</block>
   <block id="3cf3a984f792c68d00d0ddbaa1549d75" category="list-text">Sélectionnez *Dupliquer*.</block>
   <block id="1c9486cebc61c5048cf6288719fae578" category="paragraph">La page *Créer un moniteur d'alerte* apparaît avec les valeurs de champ existantes déjà renseignées.</block>
-  <block id="7a170bf7d609f40a91657be5b2c92dc3" category="list-text">Modifiez les champs selon vos besoins et cliquez sur *Créer*.</block>
   <block id="59c8147f6a6c89c779cc9c0e0d31057d" category="paragraph">Un nouveau moniteur d'alerte est créé avec la configuration mise à jour et apparaît dans la liste *Moniteurs d'alerte*.</block>
   <block id="f9fcefd0027bc07ce00160c69b1e0c90" category="open-title">Supprimer le moniteur</block>
   <block id="85fc8a3c54b846eae784ce216c74002f" category="list-text">Sélectionnez l’icône représentant des points de suspension pour le moniteur que vous souhaitez supprimer.</block>
@@ -2355,7 +2352,6 @@ Voici un exemple :</block>
   <block id="2227728e15b4a8b218a3533e278cf342" category="doc">Modifiez votre abonnement Keystone depuis la console NetApp</block>
   <block id="84b1a13bc7964ae4f7768e4f9c3c8756" category="paragraph">Vous pouvez modifier la capacité engagée de votre abonnement Keystone pour les niveaux de service de performances associés via la console NetApp .</block>
   <block id="7a91109a620e891743c65eea451a0cf2" category="paragraph"><block ref="7a91109a620e891743c65eea451a0cf2" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="cb873e65402011d905122364da690822" category="paragraph">Vous pouvez afficher et créer des moniteurs d’alerte pour vos abonnements Keystone à partir du tableau de bord Keystone dans la console NetApp . Le tableau de bord affiche les moniteurs générés par le système et définis par l'utilisateur pour l'utilisation de la capacité et l'expiration de l'abonnement. Vous pouvez créer des moniteurs pour définir des seuils, choisir la gravité des alertes et ajouter des destinataires de courrier électronique pour les notifications. Cette fonctionnalité n'est pas disponible dans Digital Advisor.</block>
   <block id="b5c32e6c2b4476154d229af70df8cf7a" category="list-text">Dans le menu de navigation de gauche de la console, sélectionnez *Stockage &gt; Keystone &gt; Surveillance &gt; Moniteurs d'alerte*.</block>
   <block id="187aba3af65d3bb1230dc8604f0acb91" category="paragraph"><block ref="187aba3af65d3bb1230dc8604f0acb91" category="inline-image-macro-rx" type="image"></block></block>
   <block id="293028e42f8edb8a2749fa8fca8130fa" category="paragraph">Le tableau de bord Keystone de la console NetApp vous permet d'afficher et de gérer les alertes actives dans votre environnement de stockage Keystone . Vous pouvez voir à la fois les alertes générées par le système et les alertes définies par l'utilisateur concernant l'utilisation de la capacité et l'expiration de l'abonnement. À partir de cette vue, vous pouvez rapidement évaluer la gravité des alertes, identifier les problèmes de stockage et prendre des mesures correctives. Cette vue n'est pas disponible dans Digital Advisor.</block>
@@ -2446,4 +2442,32 @@ Voici un exemple :</block>
   <block id="b96ad4ab266c25b5492620bb2563d5d0" category="list-text">Téléchargez le certificat d'autorité de certification de signature de code depuis Sectigo<block ref="7342f89b7e38eb427d641531b8da4ba6" category="inline-link-rx"></block>.</block>
   <block id="5107c2f981fc9d221af2aedb4d9c3f10" category="paragraph">Lorsque l'intégrité et l'authenticité de l'OVA Keystone Collector sont validées, vous pouvez voir le texte<block ref="2e5f0dac7b8d485649c8f829e8ba09da" prefix=" " category="inline-code"></block> avec l'éditeur. <block ref="4bb910ce06804868c88e19dd6ff9e83c" category="inline-image-macro-rx" type="image"></block></block>
   <block id="f4d3f733b36c05e3bcdf4287f293b20f" category="paragraph">Si le cluster est configuré en MetroCluster , exécutez la commande suivante :</block>
+  <block id="6df7635d9934b92e0bdbe5e5a544fccb" category="doc">Remplissez votre case de notification de couverture</block>
+  <block id="8583cba6ee38a66f6e19ca7c15a5c1ed" category="inline-link-macro">Gérer les lacunes de couverture pour les moniteurs d'alerte</block>
+  <block id="a60761706ec1d12934bfc1dd049da2df" category="paragraph">L'onglet *Surveillance des alertes* de la page *Surveillance* comprend une boîte de notification *Complétez votre couverture* qui apparaît en cas de lacunes de couverture.  Cette section répertorie les abonnements dont la capacité ou la date d'expiration est insuffisante, ainsi que les moniteurs sans abonnement.  Vous pouvez combler les lacunes en ajoutant des abonnements aux moniteurs existants, en créant de nouveaux moniteurs ou en supprimant les moniteurs inutilisés. Pour en savoir plus, consultez <block ref="1ef75ae1f09bcc7a95c6bbe07a54229c" category="inline-link-macro-rx"></block>.</block>
+  <block id="39fb73624dac610b8274b1bd6e2c1193" category="paragraph">Vous pouvez consulter et créer des moniteurs d'alerte pour vos abonnements Keystone à partir du tableau de bord Keystone dans la NetApp Console.  Le tableau de bord affiche les indicateurs de surveillance générés par le système et ceux définis par l'utilisateur pour l'utilisation des capacités et l'expiration des abonnements. Vous pouvez créer des moniteurs pour définir des seuils, choisir la gravité des alertes et ajouter des destinataires de courrier électronique pour les notifications.  Vous pouvez combler les lacunes de couverture en ajoutant des moniteurs aux abonnements non couverts ou en résolvant les problèmes liés aux moniteurs inutilisés. Cette fonctionnalité n'est pas disponible dans Digital Advisor.</block>
+  <block id="60adeaffad8e127352095573a6e3157f" category="paragraph">Vous pouvez afficher une liste des moniteurs d'alerte sur vos abonnements Keystone , y compris les noms des moniteurs, les conditions d'alerte qui déclenchent des notifications, les niveaux de gravité, les numéros d'abonnement, les niveaux de service de performances et l'état. Vous pouvez consulter la colonne *Créé par* pour voir si les moniteurs d'alerte sont générés par le système ou définis par l'utilisateur.</block>
+  <block id="ac092a2bcbdb5857ae37a4756db46a49" category="list-text">Sélectionnez le bouton *Créer un moniteur*.</block>
+  <block id="cb5198d92b18cf007a9117aa50f90c3e" category="list-text">Modifiez les champs dont vous avez besoin et cliquez sur *Créer*.</block>
+  <block id="2fd74b6a7fe875798408a25e1558c434" category="section-title">Gérer les lacunes de couverture</block>
+  <block id="27693e14a82cbe43a67100eb4538ddd9" category="paragraph">Une boîte de notification pliable *Complétez votre couverture* apparaît au-dessus de la liste des moniteurs d'alerte lorsqu'une action est requise.  Cela vous aide :</block>
+  <block id="15412d2b0949c1eabadcefaed9f6f8d0" category="list-text">Identifier et traiter les abonnements qui ne disposent pas de surveillance de l'utilisation de la capacité ou de l'expiration de l'abonnement.</block>
+  <block id="72cf9e6c56443b9eb5c5d28a0a693ac1" category="list-text">Examiner et gérer les moniteurs qui ne sont actuellement associés à aucun abonnement.</block>
+  <block id="4606189d5b77f103c0e503d8048ad8f7" category="inline-image-macro">Capture d'écran des zones non couvertes par les moniteurs d'alerte pour les abonnements Keystone</block>
+  <block id="db3c34c51d992294e98f857c62b4cf47" category="paragraph"><block ref="db3c34c51d992294e98f857c62b4cf47" category="inline-image-macro-rx" type="image"></block></block>
+  <block id="6c84c1a10e1c87172a9fadb894dd8445" category="paragraph">Pour corriger les abonnements sans moniteurs ou avec des moniteurs inutilisés, suivez ces étapes :</block>
+  <block id="ac81eda7e7da15651a4c3d6a60e8f290" category="open-title">Abonnements sans moniteurs</block>
+  <block id="f9fc4f7dade8ed75242e3918921812c2" category="list-text">Sélectionnez l'onglet *Expiration des abonnements* ou *Utilisation de la capacité*.</block>
+  <block id="226f73c9504a7560a9a6543e7686879d" category="list-text">Dans la colonne *Résoudre*, sélectionnez l'icône des points de suspension correspondant à l'abonnement que vous souhaitez traiter.</block>
+  <block id="4c0349a30e44fe2e3989a278d0a1f1e1" category="list-text">Choisissez-en un :</block>
+  <block id="55075c37621639cb4058160f8872944a" category="list-text">*Ajouter au moniteur existant* : Une fenêtre contextuelle apparaît.  Sélectionnez un moniteur et confirmez.</block>
+  <block id="8f9840a1a3c6e0d946a2c7230f2cc4a8" category="list-text">*Créer un nouveau moniteur* : Le système affiche la page *Créer un moniteur d’alerte*.  Suivez les étapes dans<block ref="f5b0d13ec8e410cddd0c73aae96856f8" category="inline-link-macro-rx"></block> pour créer un nouveau moniteur.</block>
+  <block id="c63b72e256a63e39fd4833b7a7c43f16" category="paragraph">L'abonnement disparaît de l'onglet une fois la couverture ajoutée.</block>
+  <block id="7652a06e5287973e36402a720937090f" category="open-title">Moniteurs inutilisés</block>
+  <block id="599e408ddca0ab40965afad26b9dd5ed" category="list-text">Sélectionnez l'onglet *Non utilisé*.</block>
+  <block id="11ea68b14110fa7cbc61ea38b5a4fcec" category="list-text">Dans la colonne *Résoudre*, sélectionnez l'icône en forme de points de suspension correspondant au moniteur que vous souhaitez cibler.</block>
+  <block id="41825a04a8338881f026e0e8b933fd54" category="list-text">*Modification* : Le système affiche la page *Surveillance des alertes de modification*.  Modifiez les champs nécessaires et enregistrez.  Pour en savoir plus, consultez<block ref="b047d326fc106faf3f12ef4efac0005e" category="inline-link-macro-rx"></block> .</block>
+  <block id="0cfa773235daafece9ec96fac7a4ae83" category="list-text">*Supprimer* : Confirmez la suppression pour retirer l’écran.</block>
+  <block id="9516b8db60240fe5a0c189f3a9d20181" category="paragraph">Le moniteur disparaît de l'onglet après l'ajout ou la suppression d'abonnements.</block>
+  <block id="77750efa6f5ff153acdc42067058017f" category="section-title">10 novembre 2025</block>
 </blocks>
